--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,19 +3,25 @@
         "атрибута",
         "атрибуті",
         "бібліотеки",
+        "бібліотеку",
         "буде",
         "великого",
         "Виконуй",
         "Використовуй",
+        "використовуючи",
         "відео",
         "Відкриття",
         "відкриттям",
+        "відображення",
+        "візьме",
         "вікна",
         "вікні",
         "вказуватися",
         "галереї",
         "галерею",
         "галерея",
+        "гортання",
+        "готовий",
         "готову",
         "даних",
         "декілька",
@@ -23,36 +29,57 @@
         "демо",
         "додавай",
         "додай",
+        "додання",
+        "додати",
         "документацією",
+        "документації",
+        "допомогою",
         "елемента",
         "елементах",
         "елементі",
+        "елементів",
+        "з'являється",
         "Заборони",
+        "завданні",
         "завдання",
         "Завдання",
+        "закриття",
         "Заміна",
         "замовчуванням",
         "зберігатися",
         "Зверни",
+        "змінити",
         "значення",
+        "знизу",
         "зображення",
         "зображенням",
+        "зображеннях",
         "зображень",
+        "Зроби",
+        "Ініціалізація",
         "інші",
         "іншу",
         "його",
+        "картки",
+        "клавіатури",
         "класи",
+        "кліків",
         "кліку",
         "користувач",
         "крім",
         "масиву",
+        "мілісекунд",
         "мініфіковані",
         "містяться",
         "модального",
         "модальному",
         "можливістю",
         "наданого",
+        "насамперед",
+        "Необхідно",
+        "Нехай",
         "обгорнуте",
+        "обробку",
         "ознайомся",
         "оригінальне",
         "отже",
@@ -60,9 +87,14 @@
         "перегляду",
         "перед",
         "перенаправлений",
+        "першого",
+        "першому",
         "підзавдань",
         "Підключення",
+        "підпис",
+        "підписів",
         "підставі",
+        "після",
         "поведінку",
         "повинно",
         "повнорозмірного",
@@ -79,18 +111,27 @@
         "Розмітка",
         "розмітки",
         "розмітку",
+        "саму",
+        "себе",
+        "секції",
+        "секцію",
         "сервіс",
         "скрипту",
         "Створення",
         "Створи",
         "стилів",
         "сторінку",
+        "також",
+        "таку",
         "теги",
+        "трохи",
         "увагу",
         "файлах",
         "файли",
         "цього",
         "цьому",
+        "через",
+        "шаблон",
         "шаблоні",
         "шаблону",
         "jsdelivr"
